lubbockonline.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 9494,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.23,
  "homepage_snapshot_redirected_domain": "lubbockonline.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001035356id_/http://lubbockonline.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001035356id_/http%3A//lubbockonline.com",
  "interval": "2004_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "lubbockonline.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207032831id_/http%3A//lubbockonline.com/housekeeping/about_us.shtml",
  "policy_title": "LubbockOnline.com",
  "policy_url": "lubbockonline.com/housekeeping/about_us.shtml",
  "sha1": "b711ebf17f84ce1763c4d542782ab9ebc8579fb1",
  "simhash": 12098867170232218960,
  "simhash_updated": false,
  "site_hostname": "lubbockonline.com",
  "site_url": "http://lubbockonline.com",
  "smog": 15.16,
  "strict_updated": true,
  "timestamp": "20041207032831",
  "word_count": 1544,
  "year": 2004
}

--- a/l/lu/lub/lubbockonline.com.html
+++ b/l/lu/lub/lubbockonline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lubbockonline.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607205536id_/http%3A//www.lubbockonline.com/housekeeping/about_us.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lubbockonline.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207032831id_/http%3A//lubbockonline.com/housekeeping/about_us.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -35,21 +35,33 @@ search</a></td></tr> </tbody></table></td></tr> <tr> <td width="100%" colspan="2
 <tr> <td width="106" height="305" align="center"><a href="http://www.lubbockonline.com/housekeeping/menuhelp.shtml"><img border="0" src="/images/menu/waiting.gif" width="100" height="125"></a></td></tr> 
 <tr> <td width="106" align="center"><img border="0" src="/images/site03/spacer.gif" width="5" height="5"><br><script language="JavaScript">DisplayAds("Left","104","180");</script><br><img border="0" src="/images/site03/spacer.gif" width="5" height="5"></td></tr> 
 <tr> <td width="106" background="/images/site03/menubg.gif" height="18" class="pad"><b>&nbsp;Features</b></td></tr> 
-<tr> <td width="106" class="pad"><div class="padmenu"> <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br> 
-<a href="http://www.lubbockonline.com/focusonagriculture/241715.pdf" class="white2">Focus 
-on Agriculture</a><br> <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br> 
-<a href="/communityservice/ad.pdf" class="white2">Community Service</a><br><img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br><a href="/gallery/index.shtml" class="white2">Photo 
-Galleries </a><br><img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br> 
-<a href="http://www.lubbockautos.com" class="white2"></a><a href="http://www.lubbockautos.com" class="white2">Lubbock 
-Autos</a><br><img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br> 
-<a href="/yp_directory.shtml" class="white2">Local Web Guide</a><br> <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br> 
-<a href="http://www.needacoupon.com" class="white2">Need a Coupon</a><br> <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br><a href="http://www.buddyhollyarchives.com" class="white2">Buddy 
-Holly Archives</a><br> <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br> 
-<a href="http://www.raidergear.com" class="white2">Raidergear</a><br>
+<tr> <td width="106" class="pad"><div class="padmenu">
   <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
-   <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br> 
-<a href="http://golfnews.lubbockonline.net/handicap/" class="white2">Golf Handicap 
-Tracker</a><br><img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br><img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br></div></td></tr> 
+  <a href="/04high_pre/" class="white2">Football Fever</a> <br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="/communityservice/ad.pdf" class="white2">Community Service</a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="http://www.lubbockschools.com" class="white2">Lubbockschools</a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="/gallery/index.shtml" class="white2">Photo Galleries </a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="/spotted/" class="white2">"You've Been Spotted"</a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="http://www.lubbockautos.com" class="white2"></a><a href="http://www.lubbockautos.com" class="white2">Lubbock 
+  Autos</a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="/local_directory.shtml" class="white2">Local Web Guide</a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="http://www.needacoupon.com" class="white2">Need a Coupon</a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="http://www.buddyhollyarchives.com" class="white2">Buddy Holly Archives</a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="http://www.raidergear.com" class="white2">Raidergear</a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"><br>
+  <a href="http://golfnews.lubbockonline.net/handicap/" class="white2">Golf Handicap 
+  Tracker</a><br>
+  <img src="/images/misc/spacer.gif" width="1" height="5" border="0"></div>
+</td></tr> 
 <tr> <td width="106"><img border="0" src="/images/site03/archivetop.gif"></td></tr> 
 <!-- ARCHIVE SEARCH--> <tr> <td width="106" background="/images/site03/graybg.gif"><table cellpadding="2" border="0" width="106"> 
 <tbody><tr> <td><font style="FONT-SIZE: 10px; FONT-FAMILY: Arial" face="Arial, sans-serif" size="1">Previous 
@@ -73,7 +85,7 @@ Delivery</a></td></tr> <tr> <td width="106"><img border="0" src="/images/menu/su
   </tr>
   <tr>
    <td bgcolor="#d7dce0" align="left"><div class="updates"><b>Currently:</b>
-Partly cloudy , 89°
+Partly cloudy , 46°
 </div></td>
    <td bgcolor="#d7dce0" align="right">Brought to you by:&nbsp;</td>
   </tr>
@@ -247,7 +259,7 @@ and Directions</a></font></b> </i></font> <hr color="#d7dce0" noshade="" size="1
 	<td align="center">
 		<table width="241" border="0" cellpadding="2" cellspacing="0">
 			<tbody><tr>
-				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=17327067&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> FEDERAL POSTAL </a>JOBS     To $56,000 YR./No Experience Necessary. Now Hiring/ Apply Today. ...<p></p></div></font></td>
+				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=19940864&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> Physical Therapist/Department </a>Manager  Part Time/Full Time....Home Health/Out-Patient/Swi...<p></p></div></font></td>
 			</tr>
 		</tbody></table>
 	</td>
@@ -267,7 +279,7 @@ and Directions</a></font></b> </i></font> <hr color="#d7dce0" noshade="" size="1
 	<td align="center">
 		<table width="241" border="0" cellpadding="2" cellspacing="0">
 			<tbody><tr>
-				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=17327077&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> Therapy  </a> Staff Needed.     Large, growing Home Health Agency   is hiring a Contract Phys...<p></p></div></font></td>
+				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=19810808&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> Hiring Trailer </a>&amp; Equipment Mechanics. Need hand tools and some welding experience. Drug t...<p></p></div></font></td>
 			</tr>
 		</tbody></table>
 	</td>
@@ -287,7 +299,7 @@ and Directions</a></font></b> </i></font> <hr color="#d7dce0" noshade="" size="1
 	<td align="center">
 		<table width="241" border="0" cellpadding="2" cellspacing="0">
 			<tbody><tr>
-				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=17327076&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> RN'S AND </a>LVN'S   Outreach Health Services has a need for Per Diem RNs and LVNs.   Fax res...<p></p></div></font></td>
+				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=19810810&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> Nurse Practitioner </a>or Physician Assisstant for busy Doctors Office. Contact Michele Greee...<p></p></div></font></td>
 			</tr>
 		</tbody></table>
 	</td>
@@ -307,7 +319,7 @@ and Directions</a></font></b> </i></font> <hr color="#d7dce0" noshade="" size="1
 	<td align="center">
 		<table width="241" border="0" cellpadding="2" cellspacing="0">
 			<tbody><tr>
-				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=17182884&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> Crosbyton Nursing </a>&amp; Rehab is accepting applications for a weekend RN &amp; Full Time LVN. Ple...<p></p></div></font></td>
+				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=19837911&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> Full Time </a>LVN, First or Second Shift 806-285-2677 or come by 800 West 13th,   Olton, TX f...<p></p></div></font></td>
 			</tr>
 		</tbody></table>
 	</td>
@@ -327,7 +339,7 @@ and Directions</a></font></b> </i></font> <hr color="#d7dce0" noshade="" size="1
 	<td align="center">
 		<table width="241" border="0" cellpadding="2" cellspacing="0">
 			<tbody><tr>
-				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=17273829&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> Prairie House </a>Living Center is searching for a motivated leader. Applicant must be a Regi...<p></p></div></font></td>
+				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=19934999&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')">Caprock Manufacturing is </a>seeking dynamic, self-motivated team oriented people with a minim...<p></p></div></font></td>
 			</tr>
 		</tbody></table>
 	</td>
@@ -347,7 +359,7 @@ and Directions</a></font></b> </i></font> <hr color="#d7dce0" noshade="" size="1
 	<td align="center">
 		<table width="241" border="0" cellpadding="2" cellspacing="0">
 			<tbody><tr>
-				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=17290662&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> Temporary Full </a>Time Painter/Make Ready Person     Apply In Person M-F   5001 Chicago Ave <p></p></div></font></td>
+				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=19860259&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')">Full-time position. 40 </a>hours, nights and some weekends. Must be honest, dependable and ava...<p></p></div></font></td>
 			</tr>
 		</tbody></table>
 	</td>
@@ -367,7 +379,7 @@ and Directions</a></font></b> </i></font> <hr color="#d7dce0" noshade="" size="1
 	<td align="center">
 		<table width="241" border="0" cellpadding="2" cellspacing="0">
 			<tbody><tr>
-				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=17327085&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')">Counselor. Position Description: </a>provide students with academic, career, transfer and pers...<p></p></div></font></td>
+				<td bgcolor="#D7DCE0"><font face="arial" size="2"><div class="topad"><a class="topad" href="http://classifieds.lubbockonline.com/classifieds-bin/classifieds?ad_id=19872222&amp;tid=64504&amp;tp=lubbock tx" target="topad" onclick="window.open('','topad','width=380,height=400,scrollbars')"> IMMEDIATE TELLER </a>OPENING  First State Bank, Shallowater, Texas Has An Immediate Opening F...<p></p></div></font></td>
 			</tr>
 		</tbody></table>
 	</td>
@@ -417,34 +429,34 @@ and Directions</a></font></b> </i></font> <hr color="#d7dce0" noshade="" size="1
 </td></tr> <!-- /ADS --> <tr> <td width="243" background=""><img border="0" src="/images/right_rail/classifieds_transit_top.gif" width="243" height="24"><br><img border="0" src="/images/right_rail/top_headlines_header.gif" width="243" height="23"></td></tr> 
 <tr> <td width="243" background="/images/site03/rtgraybg.gif" class="pad">
 
-    Updated 4:53 PM ET<br>
+    Updated 10:11 PM ET<br>
     
                 — <b>
-                    <a href="http://ap.lubbockonline.com/pstories/20040607/2218736.shtml">Reagan's family holds private service</a>
+                    <a href="http://ap.lubbockonline.com/pstories/20041206/2637016.shtml">Lawmakers back compromise on intel bill</a>
                 </b><br>
                 — <b>
-                    <a href="http://ap.lubbockonline.com/pstories/20040607/2218810.shtml">Western airliners may be al-Qaida target</a>
+                    <a href="http://ap.lubbockonline.com/pstories/20041206/2636998.shtml">9 die in attack on U.S. mission in Saudi</a>
                 </b><br>
                 — <b>
-                    <a href="http://ap.lubbockonline.com/pstories/20040607/2218678.shtml">U.S., U.K. submit new Iraq draft to U.N.</a>
+                    <a href="http://ap.lubbockonline.com/pstories/20041206/2636993.shtml">AP: FBI letter cites Guantanamo abuse</a>
                 </b><br>
                 — <b>
-                    <a href="http://ap.lubbockonline.com/pstories/20040607/2218811.shtml">Early chemo promising vs. brain cancer</a>
+                    <a href="http://ap.lubbockonline.com/pstories/20041206/2637002.shtml">Gunfight erupts near Baghdad U.S. Embassy</a>
                 </b><br>
                 — <b>
-                    <a href="http://ap.lubbockonline.com/pstories/20040607/2218733.shtml">U.S. to withdraw some S. Korea troops</a>
+                    <a href="http://ap.lubbockonline.com/pstories/20041206/2636988.shtml">Ohio certifies Bush win by 119,000 votes</a>
                 </b><br>
                 — <b>
-                    <a href="http://ap.lubbockonline.com/pstories/20040607/2218735.shtml">Bush's Hispanic support may be weakening</a>
+                    <a href="http://ap.lubbockonline.com/pstories/20041206/2636992.shtml">Ukraine rivals OK vote reforms for rematch</a>
                 </b><br>
                 — <b>
-                    <a href="http://ap.lubbockonline.com/pstories/20040607/2218809.shtml">MTV to cut shot of Eminem exposing rear</a>
+                    <a href="http://ap.lubbockonline.com/pstories/20041206/2636989.shtml">Army opens new probe into Tillman death</a>
                 </b><br>
                 — <b>
-                    <a href="http://ap.lubbockonline.com/pstories/20040607/2218786.shtml">Bullish investors push stocks higher</a>
+                    <a href="http://ap.lubbockonline.com/pstories/20041206/2636995.shtml">Soul and country artists vie for Grammys</a>
                 </b><br>
                 — <b>
-                    <a href="http://ap.lubbockonline.com/pstories/20040607/2218705.shtml">Padres select high school shortstop Bush</a>
+                    <a href="http://ap.lubbockonline.com/pstories/20041206/2636990.shtml">Jury considers WTC destruction 2 events</a>
                 </b><br>
 
 — <b><a href="http://ap.lubbockonline.com/pstories/">More News</a></b><br>
