starfieldtech.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 9236,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.98,
  "homepage_snapshot_redirected_domain": "starfieldtech.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929125005id_/http://www.starfieldtech.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929125005id_/http%3A//starfieldtech.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "starfieldtech.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207034151id_/http%3A//www.starfieldtech.com/privacy_policy.htm",
  "policy_title": "Starfield Technologies, Inc. - STARFIELD TECHNOLOGIES, INC. PRIVACY POLICY",
  "policy_url": "starfieldtech.com/privacy_policy.htm",
  "sha1": "da8788cc0ef559c5680cc2074d64ca52ea016224",
  "simhash": 6725070293633464083,
  "simhash_updated": true,
  "site_hostname": "starfieldtech.com",
  "site_url": "http://starfieldtech.com",
  "smog": 13.87,
  "strict_updated": true,
  "timestamp": "20041207034151",
  "word_count": 1451,
  "year": 2004
}

--- a/s/st/sta/starfieldtech.com.html
+++ b/s/st/sta/starfieldtech.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the starfieldtech.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607050303id_/http%3A//www.starfieldtech.com/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the starfieldtech.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207034151id_/http%3A//www.starfieldtech.com/privacy_policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Starfield Technologies, Inc. - STARFIELD TECHNOLOGIES, INC. PRIVACY POLICY</title>
@@ -95,62 +95,93 @@
 		</tr>
 		<tr>
 			<td valign="top">
-		<p>Starfield Technologies, Inc. respects your privacy. We have created this privacy statement in order to demonstrate our commitment to you, our customer. This privacy statement discloses the privacy practices for this site, www.starfieldtech.com.</p> 
+			<!-- <table width="100%" cellpadding="4" cellspacing="1" border="0" bgcolor="DDDDDD">
+			<tr>
+				<td bgcolor="F4F4F4">
+				<p><b>September 16, 2004 Notice:</b></p>
+		<p>Starfield Technologies will be amending its Privacy Policy on October 16, 2004.  The following changes will be made to the Privacy Policy:</p>
+		<ol>
+			<li>Starfield Technologies will no longer post notification of minor changes to its information handling or privacy practices 30 days in advance on our Web site.  Instead, for minor changes, we will post a notice at the top of this Privacy Policy at the time the change is made.</li>
+			<li>We are adding clarification that anytime you agree to give your information to a third party, you will be subject to their Privacy Policy.</li>
+			<li>We are adding clarification that the site statistics we collect from you using our Web site are not linked to any personally identifiable information unless necessary to prevent fraud or abuse on our system.</li>
+			<li>We are adding a section stating that your account information is deactivated within our databases after you terminate your account, and will be used to resolve disputes or enforce agreements.</li>
+		</ol>
+			<p><b>Previous Privacy Policies:</b></p>
+		<ul>
+		<li><A href="privacy_policy04.htm">Starfield Privacy Policy 2003-2004</a>
+		</ul></td>
+			</tr>
+			</table> -->
+		<p>Starfield Technologies, Inc. respects your privacy. We have created this privacy statement in order to demonstrate our commitment to you, our customer. This privacy statement discloses the privacy practices for this site, www.starfieldtech.com.</p>
+
 		
+
+<p>Starfield Technologies is a licensee of the TRUSTe Privacy Program. If you have questions or concerns regarding this statement, you should first contact Starfield Technologies at <a href="mailto:webteam@starfieldtech.com">webteam@starfieldtech.com</a> or call (480) 505-8800. If you do not receive acknowledgment of your inquiry or your inquiry has not been satisfactorily addressed, you should then contact TRUSTe. TRUSTe will then serve as a liaison with the Web site to resolve your concerns.</p>
+<div align="center">
+<p><a href="#" onclick="window.open( 'http://www.truste.org/ivalidate.php?url=www.starfieldtech.com', '', 'width=650,height=600,scrollbars=yes,resizable=no' ); return false;"><img src="images/trustelogo.gif" width="96" height="75" border="0" alt="Click to Verify"></a></p>
+</div>
 <p class="title">I. What information is collected?</p>
 
 <p><strong>Personal Information:</strong><br>
-In order to make suggestions or request product or partnership information, we require personal information from you, including your name, address, phone number, and e-mail address. If you are enrolling for a Starfield SSL Certificate, we will use your personal information for authenticating your identify in order to create and issue to you a Certificate, and to provide the accompanying Certificate Service. We do not provide your personal information from the Certificate to any third parties that are not part of the Certificate Service. For more information on our SSL Certificates, please visit <a href="/repository/">Starfield’s Certificate Repository</a>.</p> 
+In order to make suggestions or request product or partnership information, we require personal information from you, including your name, address, phone number, and e-mail address. If you are enrolling for a Starfield SSL Certificate, we will use your personal information for authenticating your identify in order to create and issue to you a Certificate, and to provide the accompanying Certificate Service. We do not provide your personal information from the Certificate to any third parties that are not part of the Certificate Service. For more information on our SSL Certificates, please visit <a href="/repository/">Starfield’s Certificate Repository</a>.</p>
 
 <p><strong>Clear Gifs (Web beacons/Web bugs)</strong><br>
 Our site does not use clear gifs.</p>
- 
+
 <p><strong>Cookies</strong><br>
-Our site does not use cookies, unless you are enrolling for one of our Starfield SSL Certificates, and then only for the limited purpose of establishing that you have been authenticated. It is a temporary cookie and does not include any personally identifiable information. The information is erased when you close your browser window. If you refuse to accept the cookie, you will not be able to apply for an SSL Certificate.</p> 
+Our site does not use cookies, unless you are enrolling for one of our Starfield SSL Certificates, and then only for the limited purpose of establishing that you have been authenticated. It is a temporary cookie and does not include any personally identifiable information. The information is erased when you close your browser window. If you refuse to accept the cookie, you will not be able to apply for an SSL Certificate.</p>
 
 <p><strong>Non-personal information:</strong><br>
-We use information gathered about you from our site statistics (for example, your IP address) to help diagnose problems with our server, and to administer our Web site. We also gather broad demographic information from this data to help us improve our site and make your browsing and purchasing experience more enjoyable.<strong> This information is not linked to any personally identifiable information.</strong></p>
+We use information gathered about you from our site statistics (for example, your IP address) to help diagnose problems with our server, and to administer our Web site. We also gather broad demographic information from this data to help us improve our site and make your browsing and purchasing experience more enjoyable.<strong> This information is not linked to any personally identifiable information, except as necessary to prevent fraud or abuse on the system.</strong></p>
 
 <p class="title">II. How information will be used.</p>
 
 <p><strong>Resale and Disclosure of Information:</strong><br>
-<strong>We maintain a strict "No-Spam" policy. We will never give any information about you to others without your express permission. We do not rent our mailing list to third parties.</strong> Our site uses forms in which you give us contact information (like your name, address, and e-mail address) so you can place orders, request information and support, and make product suggestions. We use your customer information only when it will be important for us to contact you regarding necessary correspondence regarding your product or service, functionality changes to our products, our Web site, new Starfield Technologies services, renewals, and special offers we think you'll find valuable. If you would rather not receive this information, you may opt out of it by following the instructions in Section III, below.
+<strong>We maintain a strict "No-Spam" policy. We will never give any information about you to others without your express permission. We do not rent our mailing list to third parties.</strong> Our site uses forms in which you give us contact information (like your name, address, and e-mail address) so you can place orders, request information and support, and make product suggestions. We use your customer information only when it will be important for us to contact you regarding necessary correspondence regarding your product or service, functionality changes to our products, our Web site, new Starfield Technologies services, renewals, and special offers we think you'll find valuable. If you would rather not receive this information, you may opt out of it by following the instructions in Section III, below. If you purchase any of our products or services from one of our resellers, or provide them with information, you will be subject to their privacy policy.
 
 </p><p><strong>Information from Starfield SSL Certificates:</strong><br>
 If you are applying for a Starfield SSL Certificate, we may need to compare the information in your Certificate application with information from third-party sources in order to authenticate your identity as part of the Certificate Service. We also have partners that assist us in certificate authentication that we may share your information with. Your personal information is protected by these third parties through confidentiality agreements we have with them. If those third parties have subcontractors or affiliates assisting them, they are required to enter into confidentiality agreements with them, and their actions are strictly limited to authenticating your identity.</p>
 
 <p>The information you provide for the content of a Certificate will be "published" in the Certificate where it can be seen by third parties. The content of a Certificate generally includes your e-mail address and name, and may also include other information such as your public key, the expiration date of the public key, the name of Starfield as the Certificate Authority, the serial number of the digital ID, and the digital signature of Starfield.</p>
- 
+
 <p><strong>Information Disclosure Required by Law:</strong><br>
-The only exceptions to our disclosure policy occur when:<br> 
+The only exceptions to our disclosure policy occur when:<br>
 We are required by law, in the good-faith belief that such action is necessary in order to conform to the edicts of the law.
 <strong>Or</strong><br>
-We must comply with a legal process served on our Web site.</p> 
+We must comply with a legal process served on our Web site.</p>
 
 <p><strong>E-mail:</strong><br>
-We use e-mail messages to communicate with you, to confirm your placed orders, and to send information that you have requested. We also provide email links, as on our "About Starfield Technologies" page, to allow you to contact us directly. We strive to promptly reply to your messages.</p>
+We use e-mail messages to communicate with you, to confirm your placed orders, and to send information that you have requested. We also provide e-mail links, as on our "About Starfield Technologies" page, to allow you to contact us directly. We strive to promptly reply to your messages.</p>
 
 <p>The e-mail and/or postal mail you elect to receive may include offerings from trusted Starfield Technologies advertising partners. We never sell or share your personal information for these offerings.</p>
 
 <p>The information you send to us may be stored and used to improve this site and our products, or it may be reviewed and discarded. However, your information will only be shared with third parties with your explicit permission. </p>
 
+<p><strong>What Happens to Personal Information After the Starfield SSL Certificate Service is Deactivated:</strong><br>
+When your Starfield Certificate Service is cancelled (either voluntarily or involuntarily) all of your personally identifiable information is placed in "deactivated" status on our relevant Starfield databases. However, you should know that deactivation of your account does not mean your personally identifiably information has been deleted from our database entirely. We will retain and use your personally identifiable information if necessary in order to resolve disputes or enforce our agreements.</p>
+
+
 <p class="title">III. User choices in receiving and modifying information</p>
 
 <p>As a customer of Starfield Technologies, you may alter or delete your customer information or opt out of receiving communications from our partners and us at any time, unless it is information that has been provided as content for a Starfield SSL Certificate. </p>
 
-<p>You have the choice of opting out of receiving promotional emails and mail, while still receiving non-promotional e-mails that deal with your account. 
+<p>You have the choice of opting out of receiving promotional emails and mail, while still receiving non-promotional e-mails that deal with your account.
 To modify your information that is not contained within a Starfield SSL Certificate:</p>
 <ul type="square">
 <li>You may send an e-mail to sales@starfieldtech.com
 </li><li>You may send mail to Starfield Technologies at the following postal address:<br>
 14455 North Hayden Road, Suite 219, Scottsdale, AZ 85260 USA
 </li><li>You may call us at: (480) 505-8780
-</li><li>Or you may fax us at (480) 505-8844 
+</li><li>Or you may fax us at (480) 505-8844
 </li></ul>
 <p><strong>How to Revoke Your Starfield SSL Certificate:</strong><br>
-If you subscribe to our SSL Certificate Service and would like to revoke/deactivate your Certificate, please <a href="http://certificates.starfieldtech.com" target="_blank">click here</a>. If you are using a Certificate on your Web site which is hosted by us, you will need to contact our customer service in order to get it revoked. Please be aware that after your Certificate has been revoked, your Certificate information will still appear in our repository with a revoked status. This is necessary in order to allow third parties that may be relying on it to check its status.</p> 
+If you subscribe to our SSL Certificate Service and would like to revoke/deactivate your Certificate, please <a href="http://certificates.starfieldtech.com" target="_blank">click here</a>. If you are using a Certificate on your Web site which is hosted by us, you will need to contact our customer service in order to get it revoked. Please be aware that after your Certificate has been revoked, your Certificate information will still appear in our repository with a revoked status. This is necessary in order to allow third parties that may be relying on it to check its status.</p>
+
+<p><strong>What Happens to Personal Information After the Starfield SSL Certificate Service is Deactivated:</strong><br>
+When your Starfield Certificate Service is cancelled (either voluntarily or involuntarily) all of your personally identifiable information is placed in "deactivated" status on our relevant Starfield databases. However, you should know that deactivation of your account does not mean your personally identifiably information has been deleted from our database entirely. We will retain and use your personally identifiable information if necessary in order to resolve disputes or enforce our agreements.</p>
+
 <p class="title">IV. Changes in our Practices</p>
-<p>If we change our information handling practices or other privacy aspects, we will post those changes on this privacy statement, at least 30 days prior to their implementation.</p> 
+<p>If we make material changes to our information handling practices or other privacy aspects, we will post those changes on this privacy statement, at least 30 days prior to their implementation.  Minor changes will be immediately effective upon reposting to this privacy policy on the Starfield Web site.</p>
 <p class="title">V. Your Consent to this Policy</p>
 
 <p>By using our Web site, you consent to the collection and use of your data by Starfield Technologies as specified above. Your visit and any dispute over privacy are subject to this Policy.</p>
@@ -169,8 +200,9 @@ USA<br>
 
 <p><strong>Thank you for your business.</strong><br>
 Sincerely, Starfield Technologies Webmaster</p>
+<p>Effective October 16, 2004</p>
 
-
+<p>Copyright © 2003-2004 Starfield Technologies, Inc. All Rights Reserved.</p>
 <p></p>
 
 </td>
@@ -194,14 +226,17 @@ Sincerely, Starfield Technologies Webmaster</p>
 		<td valign="top"><img src="/images/footer_bar.gif" width="780" height="20"></td>
 	</tr>
 	<tr>
-		<td valign="top"><img src="/images/spacer.gif" width="1" height="5"></td>
+		<td valign="top"><img src="images/spacer.gif" width="1" height="5"></td>
 	</tr>
 	<tr>
 		<td>
-		<table width="100%" cellpadding="0" cellspacing="0" border="0">
+		<table cellpadding="0" cellspacing="0" border="0" width="100%">
 		<tbody><tr>
-			<td><a href="/companyinfo/" class="bttm_menu">Company Info</a>&nbsp;|&nbsp;<a href="/products/" class="bttm_menu">Products</a>&nbsp;|&nbsp;<a href="/partners/" class="bttm_menu">Partners</a>&nbsp;|&nbsp;<a href="/contact/" class="bttm_menu">Contact Us</a>&nbsp;|&nbsp;<a href="/privacy_policy.htm" class="bttm_menu">Privacy Policy</a>&nbsp;|&nbsp;<a href="http://certificates.starfieldtech.com/repository" class="bttm_menu">Repository</a><br><span class="copyright">Copyright © 2003-2004 Starfield Technologies, Inc. All rights reserved.</span></td>
-			<td align="right"><a href="#" onclick="window.open( '/secured_by.htm', '', 'width=700,height=570,scrollbars=yes,resizable=no' ); return false;"><img src="/images/siteverified.gif" width="178" height="26" border="0"></a></td>
+			<td valign="top"><!-- <a href="#" onClick="window.open( '/secured_by.htm', '', 'width=700,height=570,scrollbars=yes,resizable=no' ); return false;"><img src="/images/siteverified.gif" width="178" height="26" border="0"></a> --><script language="Javascript" src="https://seal.starfieldtech.com/getSeal?sealID=7118179961eee36c172feb1d1a28e198000443947620779104060556"></script></td>
+			<td style="width: 10px;"></td>
+			<td valign="top"><a href="/companyinfo/" class="bttm_menu">Company Info</a>&nbsp;|&nbsp;<a href="/products/" class="bttm_menu">Products</a>&nbsp;|&nbsp;<a href="/partners/" class="bttm_menu">Partners</a>&nbsp;|&nbsp;<a href="/contact/" class="bttm_menu">Contact Us</a>&nbsp;|&nbsp;<a href="/privacy_policy.htm" class="bttm_menu">Privacy Policy</a>&nbsp;|&nbsp;<a href="http://certificates.starfieldtech.com/repository" class="bttm_menu">Repository</a><br><span class="copyright">Copyright © 2003-2004 Starfield Technologies, Inc. All rights reserved.</span></td>
+			<td style="width: 10px;"></td>
+			<td align="right"><a href="#" onclick="window.open( 'https://cert.webtrust.org/ViewSeal?id=355', '', 'width=650,height=600,scrollbars=yes,resizable=no' ); return false;"><img src="/images/trust_logo.gif" width="65" height="104" border="0"></a></td>
 		</tr>
 		</tbody></table></td>
 	</tr>
