--- a/r/ru/run/runboard.com.html
+++ b/r/ru/run/runboard.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the runboard.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604203856id_/http%3A//www.runboard.com/legal/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the runboard.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207034301id_/http%3A//www.runboard.com/legal/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -59,6 +59,8 @@ A:hover {
 }
 
 span.bottominfoline             { font-family:  verdana,arial,helvetica,sans-serif;    font-size:  10px;   }
+.toptoolbar                 { font-family:  verdana,arial,helvetica,sans-serif;    font-size:  10px;   }
+
 
 .idxpagefreecommslots {
 
@@ -641,6 +643,34 @@ span.bottominfoline             { font-family:  verdana,arial,helvetica,sans-ser
 	font-size:			10px;
 }
 
+.cpanel_board_urls {
+	background-color:	#ffffff;
+	color:				#777777;
+	font-family:		verdana,arial,helvetica,sans-serif;
+	font-size:			10px;
+}
+
+.cpanel_board_seemembers {
+	border-width:		1px 1px 1px 1px;
+	background-color:	#ffffff;
+	color:				#777777;
+	font-family:		verdana,arial,helvetica,sans-serif;
+	font-size:			10px;
+}
+
+.cpanel_exile_doing_time {
+	background-color:	#bbbbbb;
+	color:				#770000;
+	font-family:		verdana,arial,helvetica,sans-serif;
+	font-size:			10px;
+}
+.cpanel_exile_condemn {
+	background-color:	#ff7777;
+	color:				#000000;
+	font-family:		verdana,arial,helvetica,sans-serif;
+	font-size:			10px;
+}
+
 </style>
 
         <script language="JavaScript">
@@ -712,52 +742,28 @@ runboard.com - Free online hosted message boards and forums   </title>
 
 
  </head>
-
-<body bgcolor="#ffffff" text="#000033" id="all" link="#000033" vlink="#000033" alink="#000000">
-
-	<table cellpadding="5" cellspacing="0" border="1" bordercolor="#aaaaaa" width="100%">
-		<tbody><tr>
-			<td style="border-width: 0px; font-family:  verdana,arial,helvetica,sans-serif; font-size: 10px; font-weight: bold;" valign="top" bgcolor="#ffffff">
-				<table cellpadding="0" cellspacing="0" width="100%" border="0">
-					<tbody><tr>
-						<td bgcolor="#ffffff" valign="top" align="left">
-				<a style="background-color: #ffffff;" href="http://www.runboard.com/"><img alt="RunBoard.com" border="0" src="http://img.runboard.com/img/runboard_avi_2.jpg"></a>
-						</td>
-						<td style="font-family:  verdana,arial,helvetica,sans-serif; font-size: 10px; font-weight: bold;" valign="top" align="left">
-				<a href="http://www.runboard.com/create_community"><b>Create&nbsp;your&nbsp;message&nbsp;board</b></a>&nbsp;&nbsp;&nbsp;
-				<a href="http://www.runboard.com/about_us"><b>About&nbsp;runboard.com</b></a>&nbsp;&nbsp;&nbsp;
-				                
-				<a href="http://www.runboard.com/create_user"><b>Sign&nbsp;up</b></a>&nbsp;&nbsp;&nbsp;
-				<a href="http://www.runboard.com/login"><b>Login</b></a>&nbsp;&nbsp;&nbsp;
-				<a href="http://www.runboard.com/faq"><b>FAQ</b></a>&nbsp;&nbsp;&nbsp;
-				<a href="http://www.runboard.com/support/"><b>Help</b></a>&nbsp;&nbsp;&nbsp;
-				<a href="http://www.runboard.com/linktous"><b>Link&nbsp;to&nbsp;us</b></a>&nbsp;&nbsp;&nbsp;
-				<a href="http://blog.runboard.com"><b>Blogs</b></a><br>
-
-			</td>
-			</tr>
-			<tr>
-			<td colspan="2" valign="top">
-<hr color="#ddddff">
-				<table width="100%">
-				    <tbody><tr valign="top">
-				        <td width="100%" bgcolor="#ffffff">
+<body><center>
+<span class="toptoolbar">
+                <a href="http://www.runboard.com/"><b>Home</b></a>&nbsp;&nbsp;&nbsp;
+                <a href="http://www.runboard.com/create_community"><b>Create&nbsp;your&nbsp;message&nbsp;board</b></a>&nbsp;&nbsp;&nbsp;
+                <a href="http://www.runboard.com/about_us"><b>About&nbsp;runboard.com</b></a>&nbsp;&nbsp;&nbsp;
+                                
+                <a href="http://www.runboard.com/create_user"><b>Sign&nbsp;up</b></a>&nbsp;&nbsp;&nbsp;
+                <a href="http://www.runboard.com/login"><b>Login</b></a>&nbsp;&nbsp;&nbsp;
+                <a href="http://www.runboard.com/faq"><b>FAQ</b></a>&nbsp;&nbsp;&nbsp;
+                <a href="http://www.runboard.com/support/"><b>Help</b></a>&nbsp;&nbsp;&nbsp;
+                <a href="http://www.runboard.com/linktous"><b>Link&nbsp;to&nbsp;us</b></a>&nbsp;&nbsp;&nbsp;
+                <a href="http://blog.runboard.com"><b>Blogs</b></a><br>
+</span>
+</center>
 
 <hr>DATAHIT Privacy Policy<br>======================<br><br>DATAHIT has created this privacy statement in order to demonstrate our firm commitment to privacy. The following discloses the information gathering and dissemination practices for this Web site: Runboard.com<br><br><br><br>Server Logged Information<br>-------------------------<br><br>Whenever a User views any page located on DATAHIT servers, certain information about the visitor is automatically logged including IP address and if logged in the Username also.<br>This is standard information collected by most Web servers.<br><br><br><br><br>Registration Process<br>--------------------<br>When a User chooses to register as as a member of DATAHIT, certain information is asked for. This information includes the user's name, email address, and country.  This information will remain private and NOT disclosed or sold to any third parties.<br><br><br><br><br>Public Forums<br>-------------<br>Please be aware at all times that any information that is disclosed in forums hosted by Runboard.com becomes public information. You should therefore exercise caution when deciding to disclose your personal information.<br>Users have the option to add optional additional personal information in their control panel including location and external messengers.  Please be aware that these become publicly accessible.<br>Users may be sent private messages by other users.  At no time is the users e-mail made known.  These may also be sent in notification of replies to posts.  Both feature can be turned on/off in the users control panel.<br><br>Any opinions in messages posted in any forums located on our service are not necessarily the views of DATAHIT. DATAHIT maintains no liability for any legal action resulting from postings in forums located on our service.<br><br>When posting a message to a forum hosted by DATAHIT, your IP address is automatically logged with your post. The administrator of the board you are posting in has the option to have IP addresses displayed publicly when reading the posts in the forum. Even if not shown next to posts, IP addresses are always shown to the Head Administrator of the board and to DATAHIT.  This is common practice of most board hosts.<br>Upgraded "Purchased" Account<br>Users may choose to purchase an upgraded account giving them benefits as listed on our homepage.  We use an external payment service in Tel4money.com.  The User phones a toll number to get a code, then entering it on the site gains the User 62 days of upgraded status.  Current prices are listed on our homepage.  No personal information is given to Tel4money about users.<br>Cookies<br>This Web site uses cookies to store usernames and passwords for message boards that are visited. Please be aware that once logged into a board you will be logged in indefinitely until such time as the cookies are deleted from that computer.<br>If you are using a public computer, please ensure that upon leaving any page hosted by DATAHIT that you log out, thus preventing any unauthorised use of your Account or Services.<br>When logged into a board, your nickname for your account will be displayed in the "Online Users" section of the message board you are at.<br><br><br><br>Message Board Monitoring<br>------------------------<br>DATAHIT reserves the right to monitor any and all message boards located on our server (but no obligation to do so). Our staff has access to login to every password protected board to view the contents of those boards, as well as the ability to remove posts and/or boards that are found in violation of our Terms Of Service.<br><br>Last Updated: 10th October 2003<br><hr>
 
-
-				        </td>
-					</tr>
-				</tbody></table>
-
-			</td>
-		</tr>
-	</tbody></table>
 <br><br>
 	<table border="1" width="100%">
 		<tbody><tr align="center" valign="bottom">
 			<td style="border-width: 0px;" align="center" valign="bottom">
-				<font face="verdana,arial,helvetica" size="-2" color="#666666">
+				<font face="verdana,arial,helvetica" size="-2" color="#ffffff">
 					<a href="http://www.runboard.com/legal">Copyright</a> © 
 					<a href="http://www.runboard.com/">Datahit</a>, 2004
 					&nbsp;|&nbsp;<a href="http://www.runboard.com/legal/terms_of_service">Terms&nbsp;of&nbsp;Service</a>
@@ -776,14 +782,14 @@ runboard.com - Free online hosted message boards and forums   </title>
 
 <table width="100%">	<tbody><tr>
 		<td align="left" nowrap="nowrap" valign="bottom"><span class="bottominfoline">
-<font color="#777777">
+<font color="#000000">
 
 
 You are not logged in (<a href="http://www.runboard.com/login">login</a>)
 
 &nbsp;&nbsp;&nbsp;&nbsp;
 
-Board's time is 6/4/2004, 8:38 pm
+Board's time is 12/7/2004, 3:42 am
 </font>
 		</span></td>
 		<td align="right" valign="bottom"><span class="bottominfoline">
@@ -794,7 +800,7 @@ Board's time is 6/4/2004, 8:38 pm
 </tbody></table>
 
 
-</td></tr></tbody></table>
+
 
 
 
