--- a/e/en/enc/encirca.biz.html
+++ b/e/en/enc/encirca.biz.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the encirca.biz privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606163349id_/http%3A//encirca.biz/html/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the encirca.biz privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207034500id_/http%3A//www.encirca.biz/html/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - EnCirca</title>
@@ -9,6 +9,7 @@
 <meta name="Description" content="Domain name registrar dedicated to the ownership and control of unique, global and permanent internet addresses (domain names and e-mail addresses) for individuals.
 ">
 <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+<script language="JavaScript1.2" src="/html/javascript.js" type="text/javascript"></script>
 <base target="_top">
 </head>
 <body>
@@ -36,15 +37,15 @@
   <a href="/html/support.shtml">Support</a>
   <br><img src="/images/navline.gif" alt="navline"><br>
   <a href="/html/pro-registration.shtml">.Pro</a> ·
+  <a href="/html/pwregistration.shtml">PW</a> ·
   <a href="/updates/cnindex.shtml">.cn</a> ·
   <a href="/html/twregistration.shtml">.tw</a> ·
-  <a href="/html/euregistration.shtml">.eu</a> ·
   <a href="/html/usregistration.shtml">Kids.us</a> ·
   <a href="/html/registration.shtml">.Name</a> ·
   <a href="/html/transfer-types.shtml">Transfer</a> ·
   <a href="/html/renew.shtml">Renew</a> ·
   <a href="/html/watching.shtml">Watch</a> ·
-  <a href="/html/blogs.shtml">Blogs</a> ·
+  <a href="/html/blogs.shtml">Blog</a> ·
   <a href="/html/services.shtml">Services</a>
 
 
