--- a/w/we/web/webassign.net.html
+++ b/w/we/web/webassign.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the webassign.net privacy policy that was archived on 2004-04-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040408155519id_/http%3A//www.webassign.net/info/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webassign.net privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207035039id_/http%3A//webassign.net/info/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -67,7 +67,7 @@ location=document.search.nav.options[document.search.nav.selectedIndex].value
   <table width="650" border="0" cellspacing="0" cellpadding="0">
     <tbody><tr> 
       <td width="190"><img src="/graphics/transp.gif" alt=" " width="190" height="1"></td>
-      <td width="1">&nbsp;</td>
+      <td width="1"><img src="../graphics/transp.gif" width="1" height="1"></td>
       <td align="left" valign="middle" width="445"><img src="/graphics/transp.gif" alt=" " width="445" height="1"></td>
       <td width="10"><img src="/graphics/transp.gif" alt=" " width="10"></td>
       <td align="left" valign="middle" width="125"><img src="/graphics/transp.gif" alt=" " width="125" height="1"></td>
@@ -88,18 +88,7 @@ location=document.search.nav.options[document.search.nav.selectedIndex].value
           <option value="/info/contact.html">Contact Us</option>
         </select>
       </td>
-      <td width="1" valign="top"> 
-        <table width="1" border="0" cellspacing="0" cellpadding="0" height="100%">
-          <tbody><tr> 
-            <td valign="top" width="1"><img src="/graphics/vrblack_top.gif" width="1" height="77" alt=" "></td>
-          </tr>
-          <tr> 
-            <td><img src="/graphics/black.gif" width="1" height="1200"></td> </tr>
-          <tr> 
-            <td valign="baseline" width="1"><img src="/graphics/vrblack_bot.gif" width="1" height="91" alt=" "></td>
-          </tr>
-        </tbody></table>
-      </td>
+      <td width="1" valign="top" height="100%" bgcolor="#000000"><img src="/graphics/transp.gif" width="1"><!--black--></td>
       <td align="left" valign="top" width="445"> 
         <table width="445" border="0" cellspacing="0" cellpadding="4">
           <tbody><tr align="left" valign="top"> 
