--- a/c/co/coo/coolsiteoftheday.com.html
+++ b/c/co/coo/coolsiteoftheday.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coolsiteoftheday.com privacy policy that was archived on 2003-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20031119125650id_/http%3A//coolsiteoftheday.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coolsiteoftheday.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207035706id_/http%3A//www.coolsiteoftheday.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
