--- a/m/mu/muc/muchmusic.com.html
+++ b/m/mu/muc/muchmusic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the muchmusic.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606043805id_/http%3A//www.chumlimited.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the muchmusic.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207035757id_/http%3A//www.chumlimited.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>CHUM Limited | Privacy Statement</title>
@@ -40,40 +40,7 @@ var newWin = window.open(windowName,"Pop", set2+"width="+w+",height="+h);
 </script>
 </head>
 
-<body leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" marginwidth="0" marginheight="0" onload="getLinksToBlur()" stats="1">
-<!-- Start of DeepMetrix StatScript -->
-<script language="javascript">
-var DMdomain = "";
-var DMpage = window.location;
-var DMVersion = 86;
-var DMsendTo = "//collector.deepmetrix.com/dm.gif?";
-var DMsession;
-function dmerr(){return true;}window.onerror=dmerr;
-var u3k8u6y1j3 = new Date();
-if (navigator.userAgent.indexOf('Mac') >= 0 && u3k8u6y1j3.getTimezoneOffset() >= 720){
-u3k8u6y1j3.setTime (u3k8u6y1j3.getTime() - 1440*60*1000);}
-var u3k8u6y1 = location.protocol+DMsendTo+"v="+DMVersion+"&vst=1";
-var u3k8u6 = document.cookie.toString();if(u3k8u6.indexOf("_dmid") == -1)
-{DMsession = parseInt( Math.random()*1000000 ) + "_" + u3k8u6y1j3.getTime();
-var u3k8 = "";if(DMdomain != ""){u3k8 = "domain="+ DMdomain +";";}
-document.cookie = "_dmid=" + DMsession + ";expires=Mon, 31-Dec-2008 00:00:00 GMT;"+u3k8+"path=/;";}
-u3k8u6 = document.cookie.toString();if(u3k8u6.indexOf('_dmid') == -1){DMsession = "";}
-else{if(u3k8u6.indexOf(';') == -1){u3k8u6 = u3k8u6.replace(/_dm/g, ';_dm');}var u3 = u3k8u6.indexOf("_dmid=") + 6;
-var g5b1z7i5z6 = u3k8u6.indexOf(";",u3);if (g5b1z7i5z6 == -1){g5b1z7i5z6 = u3k8u6.length;}
-DMsession = unescape(u3k8u6.substring(u3,g5b1z7i5z6));}
-u3k8u6y1 += "&id="+DMsession+"&url="+escape(DMpage) + "&ref="+escape(document.referrer)+"&lng=" + 
-((!document.all || navigator.userAgent.match('Opera')) ? navigator.language : navigator.userLanguage) + 
-"&tz=" + (Math.round(new Date('dec 1, 2002').getTimezoneOffset()/60)*-1);
-if(screen){u3k8u6y1 += "&scr=" + escape( screen.width + "x" + screen.height + " " + screen.colorDepth + "bpp" );}
-u3k8u6y1 += "&rnd=" + new Date().getTime();if(document.layers){
-document.write("<la"+"yer name=\"DMStats\" visibility=hide><img src=\""+u3k8u6y1+"\" height=1 width=1></la"+"yer>");
-}else{document.write("<di"+
-"v id=\"DMStats\" STYLE=\"position:absolute;visibility:hidden;\"><img src=\""+u3k8u6y1+
-"\" height=1 width=1></di"+"v>");}
-</script><div id="DMStats" style="position:absolute;visibility:hidden;"><img src="https://collector.deepmetrix.com/dm.gif?v=86&amp;vst=1&amp;id=&amp;url=https%3A//web.archive.org/web/20040606043805id_/http%253A//www.chumlimited.com/privacy.asp&amp;ref=&amp;lng=en-US&amp;tz=0&amp;scr=800x600%2024bpp&amp;rnd=1580444000079" height="1" width="1"></div>
-<!-- End of DeepMetrix StatScript -->
-
-
+<body leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0" marginwidth="0" marginheight="0" onload="getLinksToBlur()">
 <table border="0" cellspacing="0" cellpadding="0" width="100%" height="100%">
 <tbody><tr>
 <td align="center" valign="top" width="48%" bgcolor="#444444"><br></td>
