--- a/m/me/met/metoffice.gov.uk.html
+++ b/m/me/met/metoffice.gov.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the metoffice.gov.uk privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602210702id_/http%3A//www.metoffice.gov.uk/corporate/legal/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the metoffice.gov.uk privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207035838id_/http%3A//www.metoffice.gov.uk/corporate/legal/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <!-- begin title -->
@@ -9,10 +9,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="expires" content="0">
 <meta http-equiv="Pragma" content="no-cache">
-<meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://www.metoffice.com&quot; r (cz 1 lz 1 nz 1 oz 1 vz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.metoffice.com&quot; r (n 0 s 0 v 0 l 0))">
+<meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://www.metoffice.gov.uk&quot; r (cz 1 lz 1 nz 1 oz 1 vz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.metoffice.gov.uk&quot; r (n 0 s 0 v 0 l 0))">
 <meta name="language" content="en">
-<meta name="alias" content="http://www.metoffice.com">
-<meta name="owner" content="webmanager@metoffice.com">
+<meta name="alias" content="http://www.metoffice.gov.uk">
+<meta name="owner" content="webmanager@metoffice.gov.uk">
 <meta name="robots" content="all">
 <meta name="parent" content="root">
 <meta name="child" content="all">
@@ -52,16 +52,16 @@ else{
 <!-- begin search -->
       <form method="post" action="/cgi-bin/AT-metofficesearch.cgi">
         <p><img src="/lib/template/search.gif" width="100" height="11" alt="Search logo"><br>
-          <input type="text" name="search" size="19">
+          <input type="text" name="search" size="19" accesskey="4">
           &nbsp; 
-          <input type="image" name="go" src="/lib/template/go.gif" alt="Search">
+          <input type="image" name="go" src="/lib/template/go.gif" alt="Go" title="Start search">
           <input type="hidden" name="mode" value="simple">
           <input type="hidden" name="sp" value="sp">
         </p>
       </form>
 <!-- end search -->
     </td>
-    <td width="370"><div align="right"><!-- begin logo --><a href="/index.html"><img src="/lib/template/logo.gif" width="250" height="69" alt="Met Office logo" border="0"></a><!-- end logo --></div></td>
+    <td width="370"><div align="right"><!-- begin logo --><a href="/index.html" accesskey="1"><img src="/lib/template/logo.gif" width="250" height="69" alt="Met Office logo" border="0"></a><!-- end logo --></div></td>
   </tr>
 </tbody></table>
 
@@ -84,9 +84,7 @@ else{
     <td width="730" valign="middle"><a href="/weather/index.html" class="nav">Weather 
       and climate</a> | <a href="/aviation/index.html" class="nav">Aviation</a> 
       | <a href="/leisure/index.html" class="nav">Leisure</a> | <a href="/research/index.html" class="nav">Research</a> 
-      | <a href="/education/index.html" class="nav">Education</a> | <a href="/products/index.html" class="nav">Product 
-      catalogue</a> | <a href="/business/index.html" class="nav">Services for 
-      business</a></td>
+      | <a href="/education/index.html" class="nav">Education</a> | <a href="/products/index.html" class="nav">Products and services</a></td>
     <td width="10"><img src="/lib/template/spacer.gif" width="10" height="20" alt="Space"></td>
   </tr>
 </tbody></table>
@@ -101,7 +99,7 @@ else{
 <!-- begin topspace -->
 <table width="750" border="0" cellspacing="0" cellpadding="0" align="center">
   <tbody><tr>
-    <td><img src="/lib/template/spacer.gif" width="750" height="5" alt="Spacer"></td>
+    <td><img src="/lib/template/spacer.gif" width="750" height="5" alt=""></td>
   </tr>
 </tbody></table>
 <!-- end topspace -->
@@ -378,95 +376,96 @@ else{
     <td width="128"> <img border="0" src="/lib/sidebar/about_us.gif" width="128" height="18" alt="About"></td>
   </tr>
   <tr> 
-    <td width="128"> <a href="/corporate/index.html" target="_self">Met 
-      Office</a></td>
+    <td width="128"> <a href="/corporate/index.html">Met Office</a></td>
   </tr>
   <tr> 
-    <td width="128"> <a href="/corporate/location/index.html" target="_self">How 
-      to find us</a></td>
+    <td width="128"><a href="/research/hadleycentre/index.html">Hadley Centre</a></td>
   </tr>
   <tr> 
-    <td width="128"><a href="/corporate/international/index.html" target="_self">International</a></td>
+    <td width="128"><a href="/corporate/international/index.html">International role</a></td>
   </tr>
   <tr> 
-    <td width="128"><a href="/corporate/library/index.html" target="_self">Library 
-      and archive</a></td>
+    <td width="128"><a href="/corporate/library/index.html">Library and archive</a></td>
   </tr>
   <tr> 
-    <td width="128"><a href="/corporate/history/index.html" target="_self">History</a></td>
+    <td width="128"><a href="/corporate/location/index.html">How to find us</a></td>
   </tr>
   <tr> 
-    <td width="128"><a href="/corporate/verification/index.html" target="_self">How 
-      are we doing?</a></td>
+    <td width="128"><a href="/corporate/recruitment/vacancies/index.html">Job 
+      vacancies</a></td>
   </tr>
   <tr> 
-    <td width="128"><a href="/corporate/recruitment/vacancies/index.html" target="_self">Vacancies</a></td>
+    <td width="128"><a href="/corporate/contracts/index.html">Contract opportunities</a></td>
   </tr>
   <tr> 
-    <td width="128"><a href="/corporate/legal/index.html" target="_self">Terms 
+    <td width="128"><a accesskey="8" href="/corporate/legal/index.html">Terms 
       and conditions</a></td>
   </tr>
   <tr> 
-    <td width="128" "=""><img src="/lib/sidebar/news_lat.gif" width="128" height="18" alt="News"></td>
+    <td width="128"><a accesskey="0" href="/accessibility/index.html">Access keys</a></td>
   </tr>
   <tr> 
-    <td width="128"> <a href="/corporate/pressoffice/index.html" target="_self">News 
-      release archive</a> </td>
+    <td width="128"><img src="/lib/sidebar/news_lat.gif" width="128" height="18" alt="News"></td>
+  </tr>
+  <tr> 
+    <td width="128"><a href="/corporate/pressoffice/index.html">News release archive</a></td>
+  </tr>
+  <tr> 
+    <td width="128"><a accesskey="m" href="/corporate/pressoffice/mediacentre.html">Media 
+      Centre</a></td>
   </tr>
   <tr> 
     <td width="128"><img src="/lib/sidebar/learn.gif" width="128" height="18" alt="Learn"></td>
   </tr>
   <tr> 
-    <td width="128"> 
-      <a href="/education/index.html" target="_self">About the weather</a>
+    <td width="128"> <a accesskey="l" href="/education/index.html">About the weather</a> 
     </td>
   </tr>
   <tr> 
-    <td width="128"><a href="/bookshelf/index.html" target="_self">From the bookshelf</a> 
-    </td>
+    <td width="128"><a href="/bookshelf/index.html">From the bookshelf</a> </td>
   </tr>
   <tr> 
     <td width="128"><img src="/lib/sidebar/services.gif" width="128" height="18" alt="Services"></td>
   </tr>
-          <tr> 
-            <td width="128"> 
-              <!-- begin flash-gif ad -->
-              <script type="text/javascript" src="/lib/scripts/advert.js"></script><a href="/services/mobile/tandp.html"><img src="/lib/adverts/sidebar/DIY_button.gif" height="125" width="125" border="0" alt="Mobile forecasts"></a>
-              <noscript><a href="/services/wxtext.html"><img src="/lib/adverts/sidebar/Umbrella_button.gif" height="125" width="125" border="0" alt="New mobile services"></a></noscript> 
-              <!-- end flash-gif ad -->
-            </td>
-          </tr>
+  <tr> 
+    <td width="128"> 
+      <!-- begin flash-gif ad -->
+      <script type="text/javascript" src="/lib/scripts/advert.js"></script><a href="/services/mobile/tandp.html"><img src="/lib/adverts/sidebar/Umbrella_button.gif" height="125" width="125" border="0" alt="Mobile forecasts"></a>
+      <noscript><a href="/services/wxtext.html"><img src="/lib/adverts/sidebar/Umbrella_button.gif" height="125" width="125" border="0" alt="New mobile services"></a></noscript> 
+      <!-- end flash-gif ad -->
+    </td>
+  </tr>
   <tr> 
     <td width="128"> <a href="/services/mobile/tandp.html">Mobile text forecasts</a></td>
   </tr>
   <tr> 
-    <td width="128"> 
-          <a href="/services/wxcall/index.html" target="_self">Weathercall</a>
-    </td>
+    <td width="128"> <a href="/services/wxcall/index.html">Weathercall</a> </td>
   </tr>
-  <tr>     
-  <td width="128"><a href="/leisuremarine/marinecall.html" target="_self">Marinecall</a></td>
+  <tr> 
+    <td width="128"><a href="/leisuremarine/marinecall.html">Marinecall</a></td>
   </tr>
   <tr> 
     <td width="128"><a href="/loutdoor/mountainsafety/mountaincall.html">Mountain 
       weather</a></td>
   </tr>
   <tr> 
-    <td width="128"> 
-      <p><a href="/services/metweb/index.html" target="_self">MetWEB</a></p>
-    </td>
+    <td width="128"><a href="/monoutlook/index.html">Monthly Outlook</a></td>
   </tr>
   <tr> 
-    <td width="128"><a href="/services/talkfc/index.html" target="_self">Talk 
-      to a forecaster</a></td>
+    <td width="128"> <a href="/services/metweb/index.html">MetWEB</a> </td>
+  </tr>
+  <tr> 
+    <td width="128"><a href="/services/talkfc/index.html">Talk to a forecaster</a></td>
   </tr>
   <tr> 
     <td width="136"><img border="0" src="/lib/sidebar/contact.gif" width="128" height="18" alt="Contact"></td>
   </tr>
   <tr> 
-    <td width="136"> 
-      <a href="/corporate/contact/contact.html">Contact us</a>
-    </td>
+    <td width="128"><a accesskey="9" href="/corporate/contact/contact.html">Contact 
+      us</a></td>
+  </tr>
+  <tr> 
+    <td width="128"><a accesskey="5" href="/faqs/index.html">FAQ</a></td>
   </tr>
         </tbody></table>
         <!-- end sidebarcontents -->
@@ -479,14 +478,14 @@ else{
 <!-- begin basespace -->
 <table width="750" border="0" cellspacing="0" cellpadding="0" align="center">
   <tbody><tr>
-    <td><img src="/lib/template/spacer.gif" width="750" height="5" alt="Spacer"></td>
+    <td><img src="/lib/template/spacer.gif" width="750" height="5" alt=""></td>
   </tr>
 </tbody></table>
 <!-- end basespace -->
 <!-- begin footer -->
 <table width="750" border="0" cellspacing="0" cellpadding="0" align="center">
   <tbody><tr>
-    <td><img src="/lib/template/btm_curve_wht.gif" width="750" height="53" alt="www.metoffice.com (C)Crown copyright"></td>
+    <td><img src="/lib/template/btm_curve_wht.gif" width="750" height="53" alt="www.metoffice.gov.uk ©Crown copyright"></td>
   </tr>
 </tbody></table>
 <!-- end footer -->
