--- a/e/ef/efi/efirstbank.com.html
+++ b/e/ef/efi/efirstbank.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the efirstbank.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605073415id_/http%3A//www.efirstbank.com/1stbank/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the efirstbank.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207035921id_/http%3A//www.efirstbank.com/1stbank/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd "><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>FirstBank Privacy Policy and Disclosure</title>
 <base href="http://www.efirstbank.com/">
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="stylesheet" href="styles/main.css" media="all" type="text/css">
 <script type="text/javascript" src="javascript/main.js"></script>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="description" content="FirstBank is committed to maintaining the privacy of our customers.">
 <meta name="keywords" content="privacy policy">
 </head>
@@ -58,7 +58,8 @@
 		<li><a href="javascript:history.back(-1)">&lt;&lt; Back</a></li>
 	</ul>
     </td>
-    <td valign="top" id="main">  <h1>FirstBank Consumer Privacy Policy and Disclosure</h1> 
+    <td valign="top" id="main">  <h1>FirstBank Consumer Privacy 
+        Policy and Security Policy Disclosure</h1> 
       <p>FirstBank is committed to maintaining the privacy of our customers. We have policies and procedures in place to restrict access to your nonpublic personal information to employees that need to know that information in order to provide products or services to you. We train our employees to protect the confidentiality of your records. In addition, we maintain physical, electronic, and procedural safeguards that comply with federal standards to guard your nonpublic personal information. </p>
       <p>We have implemented commercially reasonable security procedures for our Internet Banking Service. More information about the security procedures for the Internet Banking Service is available <a href="internetbanking/security.html">here</a>. </p>
       <p>In regard to Internet usage, cookies are pieces of data assigned by a Web server to the browser on a specific PC. Cookies help web sites recognize return visitors, and cannot be read by a web site other than the one that set the cookie. When someone returns to a web site he or she has visited before, the person's browser gives this data back to the server. </p>
@@ -67,7 +68,7 @@
       <p>Cookies are required to access account and loan applications as well as FirstBank's Internet Banking Service. Turning cookies off will prevent access to these areas of our web site. Cookies are not required to access other areas of FirstBank's web site.</p>
       <p>We are not responsible for the information collection practices of third party web sites that are linked from FirstBank's web site. In addition, we cannot guarantee how these third parties use cookies or whether they place or add computer cookies that may identify visitors personally. We recommend and encourage users to review Privacy Policies carefully before providing personal information on any of these web sites.</p>
       <p>We have implemented commercially reasonable security systems to protect personal information that we receive from any of our online applications. All information that is sent to us on these applications is encrypted using the standard security protocol Secure Socket Layer (SSL) during the transmission from an applicant's personal computer. Once an application for a loan or new account has been submitted, applicants are not able to view or update the information online, but may call FirstBank's Loans by Phone Department at 303-238-9000 or 1-877-933-9800 outside Metro Denver for information regarding applications. </p>
-      <p>For Internet Banking enrollment, once the customer has been enrolled for Internet Banking, he or she may view and update certain user information by logging into Internet Banking and going to the Personalization section. Customers may also call an Internet Banking Representative at 303-232-5522 or 1-800-964-3444 outside Metro Denver.</p>
+      <p>For Internet Banking enrollment, once the customer has been enrolled for Internet Banking, he or she may view and update certain user information by logging into Internet Banking and going to the Other Services section. Customers may also call an Internet Banking Representative at 303-232-5522 or 1-800-964-3444 outside Metro Denver.</p>
       <p>While visitors can use e-mail to contact us about routine issues and inquiries, e-mail may not be a secure method of communication for time sensitive communication or communication of information that is confidential. We strongly recommend that this type of information not be communicated via e-mail. </p>
       <p>From our web site, we do not knowingly collect or use personal information from children under 14 years of age. We are not responsible for the data collection and use practices of nonaffiliated third parties to which our web sites may link. For more information about the Children's Online Privacy Protection Act (COPPA), visit the FTC web site: <a href="http://www.ftc.gov/" rel="external" onclick="return leaving();">www.ftc.gov</a>.</p>
       <p>Our privacy policy is posted on our web site and is also available at any of our offices or by telephoning us. We do not sell information about you to third parties for any purpose. We will establish security procedures to confirm your identity. You must take reasonable precautions to maintain the confidentiality of any passwords or personal identification numbers (PINs) that you select or receive from us. </p>
