--- a/p/pa/pag/pageresource.com.html
+++ b/p/pa/pag/pageresource.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pageresource.com privacy policy that was archived on 2004-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040608141203id_/http%3A//www.pageresource.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pageresource.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207040640id_/http%3A//www.pageresource.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement for PageResource.Com</title>
@@ -30,14 +30,17 @@
 <script language="JavaScript" type="text/javascript">
 <!--
    if (!document.phpAds_used) document.phpAds_used = ',';
+   phpAds_random = new String (Math.random()); phpAds_random = phpAds_random.substring(2,11);
+   
    document.write ("<" + "script language='JavaScript' type='text/javascript' src='");
-   document.write ("http://www.javascriptcity.com/phpads/adjs.php?n=a0ddeae1");
-   document.write ("&amp;what=zone:1&amp;target=_top");
+   document.write ("http://www.pageresource.com/phpads/adjs.php?n=" + phpAds_random);
+   document.write ("&amp;what=zone:1");
    document.write ("&amp;exclude=" + document.phpAds_used);
+   if (document.referer)
+      document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.javascriptcity.com/phpads/adjs.php?n=a0ddeae1&amp;what=zone:1&amp;target=_top&amp;exclude=,"></script>
-<noscript><a href='http://www.javascriptcity.com/phpads/adclick.php?n=a0ddeae1' target='_top'><img src='http://www.javascriptcity.com/phpads/adview.php?what=zone:1&amp;target=_top&amp;n=a0ddeae1' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.pageresource.com/phpads/adjs.php?n=887411195&amp;what=zone:1&amp;exclude=,"></script><noscript><a href='http://www.pageresource.com/phpads/adclick.php?n=ab632a43' target='_blank'><img src='http://www.pageresource.com/phpads/adview.php?what=zone:1&amp;n=ab632a43' border='0' alt=''></a></noscript>
 </center>
 
 </td>
