--- a/a/ad/add/addictinggames.com.html
+++ b/a/ad/add/addictinggames.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the addictinggames.com privacy policy that was archived on 2004-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040624170559id_/http%3A//addictinggames.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the addictinggames.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207042112id_/http%3A//www.addictinggames.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Your Privacy</title>
